syntax="proto3";
option go_package=  "/grpc";

package cart;

message Reply{
  int64 id = 1;
}

message Request{
  cart cart = 1;
}

message cart{
  string id = 1;
  string customerId = 2;
  repeated menu menu = 3;
  int64 price = 4;
}
message menu{
  string id = 1;
  repeated string category = 2;
  string name = 3;
  repeated ingredient ingredient = 4;
  int64 price = 5;
  bool available = 6;

}

message ingredient{
  string ingredientName = 1;
  int64 amount = 2;
}

service SendCart{
  rpc SendCart (Request) returns (Reply);
}